<resources>
    <string name="app_name">ChaDeCat_App</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in">Login In</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gerard Moliner</string>
    <string name="nav_header_subtitle">gmoliner01@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="google_maps_key">AIzaSyC9i0OxVqCTkQWyQT6szxOhhNVmwDpvvHk</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Other Options</string>
    <string name="menu_perfil">Perfil</string>
    <string name="logout">Logout</string>
    <string name="title_activity_perfil2">Perfil2Activity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="sp_model">
        <item>e-tron</item>
        <item>Model S</item>
        <item>Model X</item>
        <item>Toyota</item>
    </string-array>
</resources>