<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.alvarado.chadecat_app.ui.maps.MapsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_maps1" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.alvarado.chadecat_app.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/activity_perfil" />
    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.alvarado.chadecat_app.ui.gallery.GalleryFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/secondFragment"
        android:name="com.alvarado.chadecat_app.secondFragment"
        android:label="fragment_second"
        tools:layout="@layout/fragment_second" />
    <fragment
        android:id="@+id/otherOptions"
        android:name="com.alvarado.chadecat_app.ui.other.OtherOptions"
        android:label="fragment_other_options"
        tools:layout="@layout/fragment_other_options" />


</navigation>